--- a/index.html
+++ b/index.html
@@ -36,17 +36,8 @@
         <div class="nav__container">
             <p class="nav__container--ul">Categorías</p>
             <img class="nav__container--img" src="./src/img/arrow.png" alt="arrow">
-            <div class="nav__container--list active">
-                <a class="nav__container--a" href="">Acción</a>
-                <a class="nav__container--a" href="">Ciencia Ficción</a>
-                <a class="nav__container--a" href="">Fantasía</a>
-                <a class="nav__container--a" href="">Misterio</a>
-                <a class="nav__container--a" href="">Suspenso</a>
-                <a class="nav__container--a" href="">Comedia</a>
-                <a class="nav__container--a" href="">Drama</a>
-                <a class="nav__container--a" href="">Terror</a>
-                <a class="nav__container--a" href="">Romance</a>
-                <a class="nav__container--a" href="">Documental</a>
+            <div id="nav" class="nav__container--list active">
+                <!-- <a class="nav__container--a" href="">Acción</a> -->
             </div>
         </div>
     </nav>
