agregue nuevo archivo navigation.js para agregar las rutas de carga de pestaña con el consumo de API

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
         </div>
     </footer>
 </body>
-<script src="./src/secrets.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 <script src="./src/index.js"></script>
+<script src="./src/navigation.js"></script>
 </html>
