agregué en la vista de home el preview de los estrenos de peliculas y diseñé las otras 3 vistas para hacer las conexiones

--- a/index.html
+++ b/index.html
@@ -32,17 +32,22 @@
         </div>
     </header>
 
-    <nav class="nav">
+    <!-- <nav class="nav">
         <div class="nav__container">
             <p class="nav__container--ul">Categorías</p>
             <img class="nav__container--img" src="./src/img/arrow.png" alt="arrow">
             <div id="nav" class="nav__container--list active">
-                <!-- <a class="nav__container--a" href="">Acción</a> -->
+                <a class="nav__container--a" href="">Acción</a>
             </div>
         </div>
+    </nav> -->
+
+    <nav class="navArrow inactive">
+        <img class="navArrow__back" src="./src/img/arrow2.png" alt="arrowBack">
+        <p class="navArrow__gender inactive">Acción</p>
     </nav>
 
-    <section class="section">
+    <!-- <section class="section">
         <div class="section__container">
             <div class="section__container--subtitle">
                 <h2 class="section__container--h2">Estrenos:</h2>
@@ -51,7 +56,6 @@
                 <a class="section__container--ver" href="">Ver más</a>
             </div>
             <div id="estrenos" class="section__container--peliculas">
-                <div class="section__container--movie"></div>
                 <div class="section__container--movie"></div>
             </div>
         </div>
@@ -64,12 +68,66 @@
                 <a class="section__container--ver" href="">Ver más</a>
             </div>
             <div id="tendencia" class="section__container--peliculas">
-                <!-- <div class="section__container--movie"></div>
-                <div class="section__container--movie"></div> -->
+                <div class="section__container--movie"></div>
             </div>
         </div>
-    </section>
+    </section> -->
 
+    <!-- <section class="section2">
+        <div class="section2__container">
+            <div class="section2__container--imagen">
+                <img class="section2__container--imag" src="./src/img/spiderman.jpg" alt="" />
+            </div>
+            <div class="section2__container--details">
+                <div class="section2__container--title">
+                    <h2 class="section2__container--titulo">Spider-Man Into the Spider-Verse</h2>
+                </div>
+                <div class="section2__container--description">
+                    <p class="section2__container--sipnosis">Después de reunirse con Gwen Stacy, el amigable vecino de tiempo completo de Brooklyn Spiderman, es lanzado a través del multiverso, donde se encuentra a un equipo de gente araña encomendada con proteger su mera existencia.</p>
+                </div>
+            </div>
+            <div class="section2__container--subtitulo">
+                <div class="section2__container--Subtitle">
+                    <h2 class="section2__container--h2">Puntuación:</h2>
+                </div>
+                <div class="section2__container--puntos">
+                    <img class="section2__container--star" src="./src/img/star.png" alt="star">
+                    <p class="section2__container--point">6.5</p>
+                </div>
+            </div>
+            <div class="section2__container--subtitulo">
+                <div class="section2__container--Subtitle">
+                    <h2 class="section2__container--h2">Categorías:</h2>
+                </div>
+                <div class="section2__container--categorias">
+                    <p class="section2__container--p">Acción</p>
+                    <p class="section2__container--p">Comedia</p>
+                    <p class="section2__container--p">Romance</p>
+                </div>
+            </div>
+            <div class="section2__container--similar">
+                <div class="section2__container--similares"></div>
+            </div>
+        </div>
+    </section> -->
+
+    <section class="section3">
+        <div class="section3__container">
+            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+        </div>
+    </section>
+    
     <footer class="footer">
         <div class="footer__container">
             <h3 class="footer__container--h3">Derechos de autor reservados al dueño de la API The movieDB</h3>
