se agrego el direccionamiento a cada categoria

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p class="nav__container--ul">Categorías</p>
             <img class="nav__container--img" src="./src/img/arrow.png" alt="arrow">
             <div id="nav" class="nav__container--list active">
-                <a class="nav__container--a" href="">Acción</a>
+                <!-- <p class="nav__container--a" href="">Acción</p> -->
             </div>
         </div>
     </nav>
