se agrego detalles de pelicula

--- a/index.html
+++ b/index.html
@@ -111,9 +111,7 @@
 
     <section class="section3">
         <div class="section3__container">
-            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
-            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
-            <img class="section3__container--img" src="./src/img/spiderman.jpg" alt="">
+            <!-- <img class="section3__container--img" src="./src/img/spiderman.jpg" alt=""> -->
         </div>
     </section>
     
