se agrego la lista de peliculas similares

--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
                 </div>
             </div>
             <div class="section2__container--similar">
-                <div class="section2__container--similares"></div>
+                <div class="section2__container--simiSubtitle">
+                    <h2 class="section2__container--simiH2">Películas Similares:</h2>
+                </div>
+                <div class="section2__container--simiCate">
+                    <div class="section2__container--simiPeli"></div>
+                </div>
             </div>
         </div>
     </section>
