--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 </head>
 <body>
     <header id="header" class="header">
-        <div class="header__img">
-            <img class="header__img--logo" src="./src/img/EYE_FILM.svg" alt="logo">
-        </div>
-        <div class="header__label">
-            <input id="headerLabelInput" class="header__label--input" type="text" placeholder="Buscar Peliculas">
-            <div class="header__label--m">
-                <img class="header__m--menu" src="./src/img/menu.png" alt="menu">
+        <div class="header__container">
+            <div class="header__img">
+                <img class="header__img--logo" src="./src/img/EYE_FILM.svg" alt="logo">
+            </div>
+            <div class="header__label">
+                <input id="headerLabelInput" class="header__label--input" type="text" placeholder="Buscar Peliculas">
+                <div class="header__label--m">
+                    <img class="header__m--menu" src="./src/img/menu.png" alt="menu">
+                </div>
             </div>
         </div>
     </header>
@@ -74,7 +76,7 @@
     <section class="section2">
         <div class="section2__container">
             <div class="section2__container--imagen">
-                <img class="section2__container--imag" src="./src/img/spiderman.jpg" alt="" />
+                <img class="section2__container--imag" alt="" />
             </div>
             <div class="section2__container--details">
                 <div class="section2__container--title">
