pantalla de carga

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
             </div>
             <div id="sectionEstrenos" class="section__container--peliculas">
                 <!-- <div class="section__container--movie"></div> -->
+                <div class="section__container--load"></div>
+                <div class="section__container--load"></div>
+                <div class="section__container--load"></div>
+                <div class="section__container--load"></div>
+                <div class="section__container--load"></div>
+                <div class="section__container--load"></div>
             </div>
         </div>
 
@@ -69,6 +75,12 @@
             </div>
             <div id="sectionTendencias" class="section__container--peliculas">
                 <!-- <div class="section__container--movie"></div> -->
+                <div class="section__container--load"></div>
+                <div class="section__container--load"></div>
+                <div class="section__container--load"></div>
+                <div class="section__container--load"></div>
+                <div class="section__container--load"></div>
+                <div class="section__container--load"></div>
             </div>
         </div>
     </section>
@@ -76,7 +88,8 @@
     <section class="section2">
         <div class="section2__container">
             <div class="section2__container--imagen">
-                <img class="section2__container--imag" alt="" />
+                <!-- <div class="section2__container--imag section__container--load3 "></div> -->
+                <img class="section2__container--imag"></img>
             </div>
             <div class="section2__container--details">
                 <div class="section2__container--title">
@@ -110,7 +123,12 @@
                     <h2 class="section2__container--simiH2">Películas Similares:</h2>
                 </div>
                 <div class="section2__container--simiCate">
-                    <div class="section2__container--simiPeli"></div>
+                    <div class="section2__container--simiPeli section__container--load2"></div>
+                    <div class="section2__container--simiPeli section__container--load2"></div>
+                    <div class="section2__container--simiPeli section__container--load2"></div>
+                    <div class="section2__container--simiPeli section__container--load2"></div>
+                    <div class="section2__container--simiPeli section__container--load2"></div>
+                    <div class="section2__container--simiPeli section__container--load2"></div>
                 </div>
             </div>
         </div>
@@ -118,6 +136,11 @@
 
     <section class="section3">
         <div class="section3__container">
+            <div class="section__container--load4"></div>
+            <div class="section__container--load4"></div>
+            <div class="section__container--load4"></div>
+            <div class="section__container--load4"></div>
+            <div class="section__container--load4"></div>
             <!-- <img class="section3__container--img" src="./src/img/spiderman.jpg" alt=""> -->
         </div>
     </section>
