agregar las cargas en los textos en la vista de detalles de peliculas

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <div class="section2__container--details">
                 <div class="section2__container--title">
                     <h2 class="section2__container--titulo">Spider-Man Into the Spider-Verse</h2>
+                    <h2 class="section2__container--carga"></h2>
                 </div>
                 <div class="section2__container--description">
                     <p class="section2__container--sipnosis">Después de reunirse con Gwen Stacy, el amigable vecino de tiempo completo de Brooklyn Spiderman, es lanzado a través del multiverso, donde se encuentra a un equipo de gente araña encomendada con proteger su mera existencia.</p>
