se creo las pantallas de carga y el }+lazyload

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
 
     <section class="section">
-        <div class="section__container">
+        <div id="sectionContainer" class="section__container">
             <div class="section__container--subtitle">
                 <h2 class="section__container--h2">Estrenos:</h2>
             </div>
@@ -93,11 +93,11 @@
             </div>
             <div class="section2__container--details">
                 <div class="section2__container--title">
-                    <h2 class="section2__container--titulo">Spider-Man Into the Spider-Verse</h2>
-                    <h2 class="section2__container--carga"></h2>
+                    <h2 class="section2__container--titulo">Cargando título de película</h2>
+                    <!-- <div class="section2__container--carga"></div> -->
                 </div>
                 <div class="section2__container--description">
-                    <p class="section2__container--sipnosis">Después de reunirse con Gwen Stacy, el amigable vecino de tiempo completo de Brooklyn Spiderman, es lanzado a través del multiverso, donde se encuentra a un equipo de gente araña encomendada con proteger su mera existencia.</p>
+                    <p class="section2__container--sipnosis">Cargando sipnosis de la pélícula</p>
                 </div>
             </div>
             <div class="section2__container--subtitulo">
@@ -106,7 +106,7 @@
                 </div>
                 <div class="section2__container--puntos">
                     <img class="section2__container--star" src="./src/img/star.png" alt="star">
-                    <p class="section2__container--point">6.5</p>
+                    <p class="section2__container--point">Cargando Puntuación</p>
                 </div>
             </div>
             <div class="section2__container--subtitulo">
@@ -114,9 +114,9 @@
                     <h2 class="section2__container--h2">Categorías:</h2>
                 </div>
                 <div class="section2__container--categorias">
-                    <p class="section2__container--p">Acción</p>
-                    <p class="section2__container--p">Comedia</p>
-                    <p class="section2__container--p">Romance</p>
+                    <p class="section2__container--p">Cargando</p>
+                    <p class="section2__container--p">Lista de</p>
+                    <p class="section2__container--p">Categorías</p>
                 </div>
             </div>
             <div class="section2__container--similar">
