se agregaron estilos de corazones para favoritos en cada pelicula

--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
                 <div class="section__container--load"></div>
             </div>
         </div>
+
+        <div class="section__container">
+            <div class="section__container--subtitle">
+                <h2 class="section__container--h2">Favoritas:</h2>
+            </div>
+            <div class="section__container--see">
+                <p id="tendencia" class="section__container--ver" href="">Ver más</p>
+            </div>
+            <div id="sectionFavoritas" class="section__container--peliculas">
+                <!-- <div class="section__container--movie"></div> -->
+                <div class="section__container--load"></div>
+            </div>
+        </div>
     </section>
 
     <section class="section2">
