--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             <div class="section__container--subtitle">
                 <h2 class="section__container--h2">Favoritas:</h2>
             </div>
+            <div class="section__container--see">
+                <p id="favorite" class="section__container--ver" href="">Ver más</p>
+            </div>
             <div id="sectionFavoritas" class="section__container--peliculas">
                 <!-- <div class="section__container--movie"></div> -->
                 <div class="section__container--like"></div>
